# sql_validation_rules

./: .env_local  README.md  inventory.txt  prompts.toml  pyproject.toml  reason.txt  start_ui.ps1  start_ui.sh  warehouse.txt
docs/: graph_setup_steps.bpmn  graph_workflow.bpmn  graph_workflow_stats_agent.bpmn  langfuse_install.txt  sql_validation_rules.bpmn  supervisor_workflow.bpmn
docs/integration_test_output/: integration_test_cases_out.txt
sql/: init_db.sql
sql_validation_rules/: db_connection_factory.py
sql_validation_rules/agent/: agent_factory.py  agent_state.py  prompt_factory.py  supervisor_factory.py
sql_validation_rules/chain/: command_extraction_factory.py  sql_commands.py
sql_validation_rules/cli/: commands_tester.py  main.py
sql_validation_rules/config/: config.py  toml_support.py
sql_validation_rules/graph/: graph_factory.py  graph_integration_numeric_test_cases.py  graph_integration_test_cases.py  graph_utils.py  supervisor_graph_factory.py  supervisor_graph_test_cases.py  supervisor_test_cases.py
sql_validation_rules/observability/: langfuse_factory.py
sql_validation_rules/persistence/: crud.py  db_connection_factory.py  sql_rules.py  sql_to_pandas.py
sql_validation_rules/test/: test_config.py  test_connect_to_postgres.py  test_db_connection_factory.py  test_prompt_factory.py  test_toml_support.py
sql_validation_rules/tools/: column_stats_tool.py  list_columns_tool.py  numeric_stats_tool.py  query_sql_db_tool.py  simple_sql_extractor.py  sql_numeric_stats_tool.py  sql_stats_string.py  sql_table_stats_tool.py  sql_tools.py  (+2 more)
(+5 files in other folders)
